--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@vueuse/core": "^14.1.0",
+    "axios": "^1.13.2",
+    "element-plus": "^2.13.1",
+    "gsap": "^3.14.2",
     "pinia": "^3.0.4",
+    "sass": "^1.97.2",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
@@ -25,6 +30,8 @@
     "@vue/tsconfig": "^0.8.1",
     "npm-run-all2": "^8.0.4",
     "typescript": "~5.9.3",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vue-tsc": "^3.2.2"
